[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydockerutils"
version = "0.0.6"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pydockerutils is a set of docker utils"
readme = "README.md"
license = "MIT"
keywords=[
    "docker",
    "container",
    "utils",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pydockerutils"
"Bug Tracker" = "https://github.com/veltzer/pydockerutils/issues"
"Documentation" = "https://veltzer.github.io/pydockerutils"
"Download" = "https://pypi.org/project/pydockerutils/"
"Repository" = "https://github.com/veltzer/pydockerutils"

[project.scripts]
pydockerutils = "pydockerutils.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydockerutils"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pydockerutils/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
